# Cpp-fast-delegates

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build_tests.bat  build_tests.sh  build_tests_bcc32.bat  build_tests_qnx.sh  codecov.yml
.github/workflows/: c-cpp.yml
delegates/: FastDelegate.h  delegate.h  delegate.impl.hpp
include/: delegate.h
tests/: delegate0_test.cpp  delegate1_test.cpp
tests/testsuit/: doctest.h  testsuit.h
